--- a/source/index.html
+++ b/source/index.html
@@ -1,40 +1,20 @@
 ---
 layout: default
 ---
-
-<div>
 {% assign index = true %}
-<article role="article">
-<div id="blog-archives">
-  <section>
-  <ul id="categories">
-    {% for category in site.categories %}
-    {% capture category_url %}{{ site.category_dir }}/{{ category | first | slugize | downcase | replace:' ','-' }}{% endcapture %}
-    {% capture full_category_url %}{{ category_url | append:'/index.html' }}{% endcapture %}
-    <li><a {% if full_category_url == page.url %}class="active"{% endif %} href="{{ root_url | append:'/' | append:category_url }}">{{ category | first }}</a></li>
-    {% endfor %}
-  </ul>
-  </section>
-
-  {% for post in site.posts reverse %}
-
-  {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
-  {% unless year == this_year %}
-    {% assign year = this_year %}
-    <h2>{{ year }}</h2>
-  {% endunless %}
-    <article>
-      {% include archive_post.html %}
-    </article>
-  {% endfor %}
-</div>
+{% for post in paginator.posts %}
+{% assign content = post.content %}
+<article>
+	{% include article.html %}
 </article>
+{% endfor %}
+<div class="pagination">
+{% if paginator.next_page %}
+  <a class="prev" href="{{paginator.next_page}}">&larr; Older</a>
+{% endif %}
+
+{% if paginator.previous_page %}
+<a class="next" href="{{paginator.previous_page}}">Newer &rarr;</a>
+{% endif %}
 </div>
 
-<aside class="sidebar">
-  {% if site.blog_index_asides.size %}
-    {% include_array blog_index_asides %}
-  {% else %}
-    {% include_array default_asides %}
-  {% endif %}
-</aside>
