--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@ layout: default
 	{% include article.html %}
 </article>
 {% endfor %}
-<div class="pagination">
+<article class="pagination">
 {% if paginator.next_page %}
   <a class="prev" href="{{paginator.next_page}}">&larr; Older</a>
 {% endif %}
@@ -16,5 +16,5 @@ layout: default
 {% if paginator.previous_page %}
 <a class="next" href="{{paginator.previous_page}}">Newer &rarr;</a>
 {% endif %}
-</div>
+</article>
 
